[tool.poetry]
name = "psgnuitka"
version = "0.2.5"
description = "A graphical tool to facilitate the generation of Python executables using Nuitka"
authors = ["boulderh <boulderh@163.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/BoulderH/psgnuitka"
repository = "https://github.com/BoulderH/psgnuitka"
keywords = ["nuitka","PySimpleGUI","psgnuitka"]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.60.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
nuitka = "1.4.*"
zstandard = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

